<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
      android:icon="@android:drawable/ic_menu_view"
      android:title="@string/chart_type">
        <menu>
            <item
              android:id="@+id/step_chart"
              android:title="@string/step_chart"/>
            <item
              android:id="@+id/calorie_chart"
              android:title="@string/calorie_chart"/>
            <item
              android:id="@+id/tv_chart"
              android:title="@string/tv_chart"/>
            <!-- <item
              android:id="@+id/weight_graph"
              android:title="@string/weight_graph"/> -->
        </menu>
    </item>
    
    <item
      android:icon="@android:drawable/ic_menu_add"
      android:title="@string/view">
        <menu>
            <item
              android:id="@+id/view_7_days"
              android:title="@string/view_7_days"/>
            <item
              android:id="@+id/view_14_days"
              android:title="@string/view_14_days"/>
            <item
              android:id="@+id/view_21_days"
              android:title="@string/view_21_days"/>
            <item
              android:id="@+id/view_30_days"
              android:title="@string/view_30_days"/>
        </menu>
    </item>
</menu>
