<?xml version="1.0" encoding="utf-8"?>
<!--
This file is part of Weight Chart.
Copyright 2010 Fredrik Portstrom

Weight Chart is free software: you can redistribute it and/or modify
it under the terms of the GNU General Public License as published by
the Free Software Foundation, either version 3 of the License, or (at
your option) any later version.

Weight Chart is distributed in the hope that it will be useful, but
WITHOUT ANY WARRANTY; without even the implied warranty of
MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU
General Public License for more details.

You should have received a copy of the GNU General Public License
along with Weight Chart. If not, see <http://www.gnu.org/licenses/>.
-->
<ScrollView
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent">
    <LinearLayout
      android:orientation="vertical"
      android:layout_width="fill_parent"
      android:layout_height="fill_parent"
      android:paddingLeft="8dip"
      android:paddingRight="8dip">
        <TextView
          android:text="@string/height_unit"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"/>
        <Spinner
          android:id="@+id/height_unit"
          android:layout_width="fill_parent"
          android:layout_height="wrap_content"/>
        <TextView
          android:text="@string/height_input"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"/>
        <LinearLayout
          android:id="@+id/cm_input"
          android:layout_width="fill_parent"
          android:layout_height="wrap_content">
	    <EditText
              android:id="@+id/cm"
              android:layout_width="96sp"
              android:layout_height="wrap_content"
              android:numeric="integer"/>
            <TextView
              android:text="@string/cm"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"/>
	</LinearLayout>
        <LinearLayout
          android:id="@+id/ft_input"
          android:layout_width="fill_parent"
          android:layout_height="wrap_content">
            <EditText
              android:id="@+id/ft"
              android:layout_width="96sp"
              android:layout_height="wrap_content"
              android:numeric="integer"/>
            <TextView
              android:text="@string/ft"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"/>
            <EditText
              android:id="@+id/in"
              android:layout_width="96sp"
              android:layout_height="wrap_content"
              android:numeric="integer"/>
            <TextView
              android:text="@string/in"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"/>
        </LinearLayout>
    </LinearLayout>
</ScrollView>
