<?xml version="1.0" encoding="utf-8"?>
<!--
This file is part of Weight Chart.
Copyright 2010 Fredrik Portstrom

Weight Chart is free software: you can redistribute it and/or modify
it under the terms of the GNU General Public License as published by
the Free Software Foundation, either version 3 of the License, or (at
your option) any later version.

Weight Chart is distributed in the hope that it will be useful, but
WITHOUT ANY WARRANTY; without even the implied warranty of
MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU
General Public License for more details.

You should have received a copy of the GNU General Public License
along with Weight Chart. If not, see <http://www.gnu.org/licenses/>.
-->
<ScrollView
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent">
    <LinearLayout
      android:orientation="vertical"
      android:layout_width="fill_parent"
      android:layout_height="fill_parent"
      android:padding="8dip">
        <TextView
          android:text="@string/file_input"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"/>
        <EditText
          android:id="@+id/file"
          android:layout_width="fill_parent"
          android:layout_height="wrap_content"/>
        <TextView
          android:text="@string/size_input"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"/>
        <LinearLayout
          android:layout_width="fill_parent"
          android:layout_height="wrap_content">
            <EditText
              android:id="@+id/size_x"
              android:layout_width="96sp"
              android:layout_height="wrap_content"
              android:numeric="integer"/>
            <TextView
              android:text="×"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"/>
            <EditText
              android:id="@+id/size_y"
              android:layout_width="96sp"
              android:layout_height="wrap_content"
              android:numeric="integer"/>
        </LinearLayout>
	<TextView
          android:text="@string/end_date_input"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"/>
        <Button
          android:id="@+id/end_date"
          android:layout_width="128sp"
          android:layout_height="wrap_content"/>
        <TextView
          android:text="@string/days_input"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"/>
        <EditText
          android:id="@+id/days"
          android:layout_width="96sp"
          android:layout_height="wrap_content"
          android:numeric="integer"/>
        <CheckBox
          android:id="@+id/transparency"
          android:text="@string/transparency"
          android:layout_width="fill_parent"
          android:layout_height="wrap_content"/>
    </LinearLayout>
</ScrollView>
