<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
			android:id="@+id/PedometerScrollView"
			android:layout_width="fill_parent"
			android:layout_height="fill_parent" >
<LinearLayout android:layout_width="fill_parent" 
              android:layout_height="fill_parent" 
              android:orientation="vertical" >
              
    <ImageView android:layout_width="fill_parent"
    		   android:layout_height="wrap_content"
    		   android:gravity="center_horizontal"
    		   android:src="@drawable/npng" />           
              
    <LinearLayout android:id="@+id/row_1"
        android:orientation="horizontal" 
        android:layout_width="fill_parent" 
        android:layout_height="wrap_content" 
        android:paddingBottom="@dimen/row_spacing">
    
        <LinearLayout android:id="@+id/box_steps"
            android:orientation="vertical"
            android:layout_width="@dimen/box_width" 
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:paddingRight="@dimen/margin">
        
            <TextView android:id="@+id/step_value"
                android:textSize="@dimen/value"
                android:layout_width="fill_parent" 
                android:layout_height="wrap_content"
                android:gravity="center_horizontal" 
                android:background="@color/display_background" 
                android:paddingLeft="@dimen/padding" 
                android:paddingRight="@dimen/padding" 
                android:paddingTop="@dimen/padding"/>
            <TextView android:id="@+id/step_units"
                android:gravity="center_horizontal"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/units" 
                android:text="@string/steps" 
                android:background="@color/display_background" 
                android:paddingBottom="@dimen/padding"/>

        </LinearLayout>

        <LinearLayout android:id="@+id/box_distance"
            android:orientation="vertical"
            android:layout_width="@dimen/box_width" 
            android:layout_height="wrap_content"
            android:gravity="center_horizontal">
            
            <TextView android:id="@+id/distance_value"
                android:textSize="@dimen/small_value"
                android:layout_width="fill_parent" 
                android:layout_height="wrap_content"
                android:gravity="center_horizontal" 
                android:background="@color/display_background" 
                android:paddingTop="@dimen/padding" 
                android:paddingRight="@dimen/padding" 
                android:paddingLeft="@dimen/padding"/>
            <TextView android:id="@+id/distance_units"
                android:gravity="center_horizontal"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/units"
                android:text="@string/miles" 
                android:background="@color/display_background" 
                android:paddingBottom="@dimen/padding"/>

        </LinearLayout>
    </LinearLayout>
        
    <LinearLayout android:id="@+id/row_2"
        android:orientation="horizontal" 
        android:layout_width="fill_parent" 
        android:layout_height="wrap_content" 
        android:paddingBottom="@dimen/row_spacing">
    
        <LinearLayout android:id="@+id/box_pace"
            android:orientation="vertical" 
            android:layout_height="wrap_content"
            android:paddingRight="@dimen/margin" 
            android:layout_width="@dimen/third_box_width">
        
            <TextView android:id="@+id/pace_value"
                android:gravity="center_horizontal"
                android:layout_width="fill_parent" 
                android:layout_height="wrap_content" 
                android:background="@color/display_background" 
                android:textSize="@dimen/small_value" 
                android:paddingLeft="@dimen/padding" 
                android:paddingRight="@dimen/padding" 
                android:paddingTop="@dimen/padding"/>
            <TextView android:id="@+id/pace_units"
                android:gravity="center_horizontal"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/units"
                android:text="@string/steps_per_minute" 
                android:paddingBottom="@dimen/padding" 
                android:background="@color/display_background"/>
                         
        </LinearLayout>

        <LinearLayout android:id="@+id/box_speed"
            android:orientation="vertical"
            android:paddingRight="@dimen/margin"  
            android:layout_height="wrap_content" 
            android:layout_width="@dimen/third_box_width">
        
            <TextView android:id="@+id/speed_value"
                android:gravity="center_horizontal"
                android:layout_width="fill_parent" 
                android:layout_height="wrap_content" 
                android:background="@color/display_background" 
                android:textSize="@dimen/small_value" 
                android:paddingLeft="@dimen/padding" 
                android:paddingRight="@dimen/padding" 
                android:paddingTop="@dimen/padding"/>
            <TextView android:id="@+id/speed_units"
                android:gravity="center_horizontal"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/units"
                android:text="@string/miles_per_hour" 
                android:paddingBottom="@dimen/padding" 
                android:background="@color/display_background"/>
        </LinearLayout>

        <LinearLayout android:id="@+id/box_calories"
            android:orientation="vertical" 
            android:layout_height="wrap_content"
            android:paddingRight="@dimen/margin" 
            android:layout_width="@dimen/third_box_width">
        
            <TextView android:id="@+id/calories_value"
                android:gravity="center_horizontal"
                android:layout_width="fill_parent" 
                android:layout_height="wrap_content" 
                android:background="@color/display_background" 
                android:textSize="@dimen/small_value" 
                android:paddingLeft="@dimen/padding" 
                android:paddingRight="@dimen/padding" 
                android:paddingTop="@dimen/padding"/>
            <TextView android:id="@+id/calories_units"
                android:gravity="center_horizontal"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/units" 
                android:text="@string/calories_burned" 
                android:paddingBottom="@dimen/padding" 
                android:background="@color/display_background"/>
                         
        </LinearLayout>

    </LinearLayout>
    
    <Button android:id="@+id/submitButton"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="Submit Steps" />

</LinearLayout>
</ScrollView>